// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading editor plugins.renderNode calls next 1`] = `
<SlateWrapper
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "mockNode",
    }
  }
/>
`;

exports[`Heading editor plugins.renderNode renders Heading when passed 1`] = `
<SlateWrapper
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Heading",
    }
  }
/>
`;

exports[`Heading editor plugins.renderPlaceholder exits when not relevent 1`] = `undefined`;

exports[`Heading editor plugins.renderPlaceholder exits when not relevent 2`] = `undefined`;

exports[`Heading editor plugins.renderPlaceholder exits when not relevent 3`] = `undefined`;

exports[`Heading editor plugins.renderPlaceholder renders a placeholder 1`] = `
<span
  className="placeholder align-left"
  contentEditable={false}
  data-placeholder="Type Your Heading Here"
/>
`;
